[package]
name = "fem_mnc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.2"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-stream = { version = "0.1.9" }
lazy_static = "1.4"
warp = "0.3.2"
tracing = "0.1"
tracing-subscriber = "0.2"
